# RadioWizard

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: BUILD.md  DESIGN.md  DEVELOPMENT.md
sanitizer_suppressions/: lsan_suppressions.txt
src/RadioWizardMain/: AudioOutput.cpp  AudioOutput.h  CMakeLists.txt  FrequencyInputWidget.cpp  FrequencyInputWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/TestApps/: CMakeLists.txt  HighBandwidthPublisherTester.cpp  HighBandwidthSubscriberTester.cpp  RealTimeGraphsTest.cpp  Vita49FileCodec.cpp  Vita49PerfBenchmark.cpp  Vita49RoundTripTest.cpp  ZyrePublisherTest.cpp  ZyreSubscriberTest.cpp
src/libs/CommonUtils/: CMakeLists.txt  CircularBuffer.h  DataHandler.h  GeneralLogger.cpp  GeneralLogger.h  SnoozableTimer.cpp  SnoozableTimer.h  StackTrace.cpp  StackTrace.h  Timer.cpp  Timer.h
src/libs/PubSub/: CMakeLists.txt  HighBandwidthPublisher.cpp  HighBandwidthPublisher.h  HighBandwidthSubscriber.cpp  HighBandwidthSubscriber.h  ZyreNode.cpp  ZyreNode.h  ZyrePublisher.cpp  ZyrePublisher.h  ZyreSubscriber.cpp  ZyreSubscriber.h
src/libs/RealTimeGraphs/: .clang-tidy  BandwidthSelector.cpp  BandwidthSelector.h  CMakeLists.txt  ColorBarWidget.cpp  ColorBarWidget.h  ColorMap.cpp  ColorMap.h  CommonGuiUtils.cpp  CommonGuiUtils.h  ConstellationWidget.cpp  ConstellationWidget.h  OscilloscopeWidget.cpp  OscilloscopeWidget.h  PlotCursorOverlay.cpp  PlotCursorOverlay.h  PlotPainterUtils.cpp  PlotPainterUtils.h  PlotWidgetBase.cpp  PlotWidgetBase.h  SpectrumWidget.cpp  SpectrumWidget.h  WaterfallWidget.cpp  WaterfallWidget.h
src/libs/SdrEngine/: .clang-tidy  CMakeLists.txt  ChannelFilter.cpp  ChannelFilter.h  Demodulator.cpp  Demodulator.h  FftProcessor.cpp  FftProcessor.h  ISdrDevice.h  PlutoSdrDevice.cpp  PlutoSdrDevice.h  RtlSdrDevice.cpp  RtlSdrDevice.h  SdrCommonUtils.cpp  SdrCommonUtils.h  SdrEngine.cpp  SdrEngine.h  SdrTypes.h  SoapySdrDevice.cpp  SoapySdrDevice.h
src/libs/Vita49_2/: .clang-tidy  ByteSwap.h  CMakeLists.txt  ContextPacket.cpp  ContextPacket.h  PacketHeader.cpp  PacketHeader.h  SignalDataPacket.cpp  SignalDataPacket.h  Vita49Codec.cpp  Vita49Codec.h  Vita49Types.h
src/libs/proto/: CMakeLists.txt
src/libs/proto/proto-messages/: commands.proto  configuration.proto  sensor_data.proto
tests/: .clang-tidy
tests/CommonUtilsTests/: CMakeLists.txt  CircularBufferUt.cpp  DataHandlerUt.cpp  SnoozableTimerUt.cpp  StackTraceUt.cpp  TestMain.cpp  TimerUt.cpp
tests/PubSubTests/: CMakeLists.txt  HighBandwidthPublisherUt.cpp  HighBandwidthSubscriberUt.cpp  TestMain.cpp  ZyreNodeUt.cpp  ZyrePublisherUt.cpp  ZyreSubscriberUt.cpp
tests/RealTimeGraphsTests/: CMakeLists.txt  OscilloscopeWidgetUt.cpp  TestMain.cpp
tests/SdrEngineTests/: CMakeLists.txt  ChannelFilterUt.cpp  DemodulatorUt.cpp  FftProcessorUt.cpp  PlutoSdrDeviceUt.cpp  SdrCommonUtilsUt.cpp  SdrEngineUt.cpp  SoapySdrDeviceUt.cpp  TestMain.cpp
tests/Vita49_2Tests/: CMakeLists.txt  ContextPacketUt.cpp  PacketHeaderUt.cpp  SignalDataPacketUt.cpp  TestMain.cpp  Vita49CodecUt.cpp
